--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,4 +13,5 @@ html
       .container-fluid
         = yield
         = render partial: 'shared/modal_window'
+        div#modal_window.modal.hide.fade
     = render partial: 'layouts/footer'
