--- a/app/views/admin/categories/create.js.slim
+++ b/app/views/admin/categories/create.js.slim
@@ -1,4 +1,5 @@
-| if ($('#no_categories')) {
-|   $('p#no_categories').remove();
-| }
-| $('#categories_list').append("#{j(render partial: 'category', locals: { category: @category })}");
+- if @category.valid?
+  | if ($('#no_categories')) {
+  |   $('p#no_categories').remove();
+  | }
+  | $('#categories_list').append("#{j(render partial: 'category', locals: { category: @category })}");
