--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,18 @@
  *= require_tree .
  */
 
+.content-container {
+  width: 1000px;
+  margin: 0 auto;
+}
+
 .translation_missing {
   border: 2px solid red;
+}
+
+.block {
+  background: #F2F2F2;
+  border: 2px solid grey;
+  border-radius: 5px 5px 5px 5px;
+  padding: 10px;
 }
