--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -8,3 +8,12 @@
         p#no_categories= t('.no_categories')
     #add_category
       = link_to t('.add_category'), new_admin_category_path, remote: true
+  #assortments
+    h3= t('.assortments_title')
+    #assortments_list.block
+      - if @assortments
+        = render partial: '/admin/assortments/assortment', collection: @assortments
+      - else
+        p#no_assortments= t('.no_assortments')
+    #add_assortment
+      = link_to t('.add_assortment'),  new_admin_assortment_path, remote: true
