Fix categories&assortiment (can't destroy category if present subject assortiment, can't create assortiment if category isn't present), fix index when categ&assort is empty

--- a/app/views/admin/assortments/create.js.slim
+++ b/app/views/admin/assortments/create.js.slim
@@ -1,5 +1,5 @@
 - if @assortment.valid?
   | if ($('#no_assortments')) {
-  |   $('p#no_assortments').remove();
+  |   $('p#no_assortments').hide();
   | }
   | $('#assortments_list').append("#{j(render partial: 'assortment', locals: { assortment: @assortment })}");
