--- a/app/views/admin/categories/create.js.slim
+++ b/app/views/admin/categories/create.js.slim
@@ -1,5 +1,5 @@
 - if @category.valid?
   | if ($('#no_categories')) {
-  |   $('p#no_categories').remove();
+  |   $('p#no_categories').hide();
   | }
   | $('#categories_list').append("#{j(render partial: 'category', locals: { category: @category })}");
