--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -2,7 +2,7 @@
   #categories
     h3= t('.categories_title')
     #categories_list.block
-      - if @categories
+      - unless @categories.empty?
         = render partial: '/admin/categories/category', collection: @categories
       - else
         p#no_categories= t('.no_categories')
@@ -11,9 +11,9 @@
   #assortments
     h3= t('.assortments_title')
     #assortments_list.block
-      - if @assortments
-        = render partial: '/admin/assortments/assortment', collection: @assortments
-      - else
+      - if @assortments.any?
         p#no_assortments= t('.no_assortments')
+      - else
+        = render partial: '/admin/assortments/assortment', collection: @assortments
     #add_assortment
       = link_to t('.add_assortment'),  new_admin_assortment_path, remote: true
