--- a/app/views/admin/assortments/destroy.js.slim
+++ b/app/views/admin/assortments/destroy.js.slim
@@ -1,3 +1,3 @@
 | $("#assortment_#{@assortment.id}").remove();
-- unless @assortment_true
+- if @assortments.empty?
   | $('p#no_assortments').show();
