--- a/app/views/admin/categories/destroy.js.slim
+++ b/app/views/admin/categories/destroy.js.slim
@@ -1,3 +1,1 @@
-| $("#category_#{@category.id}").remove();
-- unless @categories_true
-  | $('p#no_categories').show();
+| sendRequest("#{admin_categories_path}", 'get');
