--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,3 +28,13 @@
   border-radius: 5px 5px 5px 5px;
   padding: 10px;
 }
+
+.back-wall {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 1040;
+  background: url('ajax_loader.gif') no-repeat center;
+}
