--- a/app/views/admin/categories/index.js.slim
+++ b/app/views/admin/categories/index.js.slim
@@ -1,1 +1,1 @@
-| $('#categories_list').html("#{j(render partial: '/admin/categories/category', collection: @categories)}")
+| $('#categories_list').html("#{j(render partial: '/admin/categories/categories')}")
