Improved multi-model pagination

--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -2,4 +2,12 @@
   #categories_list {
     position: relative;
   }
+
+  #assortments_list {
+    position: relative;
+  }
+
+  #products_list {
+    position: relative;
+  }
 }
