--- a/app/views/admin/assortments/destroy.js.slim
+++ b/app/views/admin/assortments/destroy.js.slim
@@ -1,3 +1,1 @@
-| $("#assortment_#{@assortment.id}").remove();
-- if @assortments.empty?
-  | $('p#no_assortments').show();
+| sendRequest("#{admin_assortments_path}", 'get');
