--- a/app/views/admin/products/create.js.slim
+++ b/app/views/admin/products/create.js.slim
@@ -1,6 +1,2 @@
-- if @product.valid?
-  | if ($('#no_products')) {
-  |   $('p#no_products').remove();
-  | }
-  | $('#products_list').append("#{j(render partial: 'product', locals: { product: @product })}");
+| sendRequest("#{admin_products_path}", 'get');
 | $('#modal_window').modal('hide');
