--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,6 +11,7 @@ html
         = render partial: 'layouts/header'
     #wrap
       .container-fluid.content-container
+        = render partial: 'shared/flash_messages'
         = yield
         = render partial: 'shared/modal_window'
         div#modal_window.modal.hide.fade
