--- a/app/views/admin/assortments/_form.html.slim
+++ b/app/views/admin/assortments/_form.html.slim
@@ -4,7 +4,7 @@
     .row-fluid
       .span2= f.label t('.name')
       .span5= f.text_field :name
-      .span5= f.collection_select :category_id, @categories, :id, :name, prompt: true
+      .span5= select_tag :category_id, options_from_collection_for_select(@categories, "id", "name")
     .row-fluid
-      .span6= f.submit t('.save')
-      .span6= link_to t('.cancel'), 'javascript: void(false)', onclick: 'Popup.hideModal()'
+      .span6= f.submit t('save')
+      .span6= link_to t('cancel'), 'javascript: void(false)', onclick: 'Popup.hideModal()'
