--- a/app/views/admin/categories/edit.js.slim
+++ b/app/views/admin/categories/edit.js.slim
@@ -1,3 +1,3 @@
 | $('#modal_window').addClass('text-center');
 | $('#modal_window').modal('show');
-| $('#modal_window').html("#{j(render partial: 'form', locals: { url: admin_category_path, method: 'put' })}");
+| $('#modal_window').html("#{j(render partial: 'form', locals: { title: t('.edit'), url: admin_category_path, method: 'put' })}");
