--- a/app/views/admin/categories/new.js.slim
+++ b/app/views/admin/categories/new.js.slim
@@ -1,3 +1,3 @@
 | $('#modal_window').addClass('text-center')
                     .modal('show')
-                    .html("#{j(render partial: 'form', locals: { url: admin_categories_path, method: 'post' })}");
+                    .html("#{j(render partial: 'form', locals: { title: t('.new'), url: admin_categories_path, method: 'post' })}");
