--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -11,10 +11,7 @@
     .row-fluid
       .span12= link_to t('.add_assortment'),  new_admin_assortment_path, remote: true
     #assortments_list.block
-      - if @assortments.any?
-        = render partial: '/admin/assortments/assortment', collection: @assortments
-      - else
-        p#no_assortments= t('.no_assortments')
+      = render partial: 'admin/assortments/assortments'
 
   #products data-url="#{admin_products_path}"
     h3= t('.products_title')
