--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -1,13 +1,9 @@
+.row-fluid
+  .span12= link_to t('.back_to_products'), products_path
 .block
   .row-fluid id="product_#{@product.id}"
     .span3= @product.name
     .span6= @product.description
-.row-fluid#comments
-  = form_for @review, url: product_reviews_path(@product) do |f|
-    = f.label :review
-    = f.text_area :body, rows: 4, class: "span8"
-    p
-      = f.submit t('.submit'), class: "btn"
-.row-fluid
-  = render partial: "review", collection: @reviews, as: :review
-p= link_to t('.back'), admin_root_path
+.row-fluid#new_comment_form
+  = render partial: '/reviews/form'
+.row-fluid#comments data-url="#{product_reviews_path(@product)}"
