Add localization to edit profile

--- a/app/views/profiles/edit.html.slim
+++ b/app/views/profiles/edit.html.slim
@@ -1,16 +1,17 @@
-= render 'errors'
+/ = render 'errors'
 .block
   .row-fluid
     = form_for @profile, url: profile_path, builder: StandartBuilder do |f|
-      = f.label :first_name
+      = f.error_messages
+      = f.label t('.first_name')
       = f.text_field :first_name
-      = f.label :last_name
+      = f.label t('.last_name')
       = f.text_field :last_name
-      = f.label :phone_number
+      = f.label t('.phone_number')
       = f.telephone_field :phone_number
-      = f.label :gender
+      = f.label t('.gender')
       = f.select :gender, options_for_select(%w[Male Female])
-      = f.label :country
+      = f.label t('.country')
       = f.country_select :country, {priority: %w(UA RU BY)}, prompt: 'select'
       p
-        = f.submit
+        = f.submit t('save')
