--- a/app/views/profiles/show.html.slim
+++ b/app/views/profiles/show.html.slim
@@ -1,29 +1,29 @@
 .block
   .row-fluid
     .span3
-      | First Name
+      | "#{ t('.first_name') }"
     .span3
       = @profile.first_name
   .row-fluid
     .span3
-      | Last Name
+      | "#{ t('.last_name') }"
     .span3
       = @profile.last_name
   .row-fluid
     .span3
-      | Phone Number
+      | "#{ t('.phone_number') }"
     .span3
       = "(+#{@code}) #{@profile.phone_number}"
   .row-fluid
     .span3
-      | Gender
+      | "#{ t('.gender') }"
     .span3
       = @profile.gender
   .row-fluid
     .span3
-      | Country
+      | "#{ t('.country') }"
     .span3
       = "#{@country}"
   .row-fluid
-    =link_to 'Edit', edit_profile_path(@profile), class: 'btn btn-success'
+    =link_to t('edit'), edit_profile_path(@profile), class: 'btn btn-success'
         
