--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -6,9 +6,9 @@
         .row-fluid
           .span3= @product.name
           .span6= @product.description
+          / .span3= rating_for @product, 'quality'
   .span3.block
     .row-fluid
-      .span12= link_to t('.to_wishes'), wish_add_path(@variants.first), remote: true
+      .span12= link_to t('.to_wishes'), wish_add_path(@variants.first), remote: true if @variants.any?
 .row-fluid#new_comment_form
-  = render partial: '/reviews/form'
-.row-fluid#comments data-url="#{product_reviews_path(@product)}"
+  = render partial: '/reviews/reviews'
