--- a/app/views/reviews/new.js.slim
+++ b/app/views/reviews/new.js.slim
@@ -1,1 +1,3 @@
-| $('#new_comment_form').html("#{j(render partial: 'form')}");
+| $('#modal_window')
+      .addClass('text-center')
+      .modal('show').html("#{j(render partial: 'new_review', url: product_reviews_path, method: 'post')}");
