Add rate to product

--- a/app/views/profiles/_errors.html.slim
+++ b/app/views/profiles/_errors.html.slim
@@ -1,6 +1,6 @@
 .row-fluid
   - @profile.errors.full_messages.each do |msg|
     .alert.alert-danger
-      button type="button" class="close" data-dismiss="alert"
+      button type='button' class='close' data-dismiss='alert'
         | &times
       = msg
