--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -1,14 +1,14 @@
 .row-fluid
   .span12= link_to t('.back_to_products'), products_path
-.row-fluid
+.row-fluid id="product_#{@product.id}"
   .span9.block
     .row-fluid id="product_#{@product.id}"
         .row-fluid
           .span3= @product.name
           .span6= @product.description
-          / .span3= rating_for @product, 'quality'
+          .span3= render partial: 'rate'
   .span3.block
     .row-fluid
-      .span12= link_to t('.to_wishes'), wish_add_path(@variants.first), remote: true if @variants.any?
+      .span12= link_to t('.to_wishes'), wish_add_path(@variants.first), remote: true if @variants.present?
 .row-fluid#new_comment_form
   = render partial: '/reviews/reviews'
