--- a/app/views/admin/products/show.html.slim
+++ b/app/views/admin/products/show.html.slim
@@ -1,5 +1,5 @@
 .block
-  .row-fluid id="product_#{@product.id}"
-    .span3= @product.name
-    .span6= @product.description
+  .row id="product_#{@product.id}"
+    .col-md-3= @product.name
+    .col-md-6= @product.description
 p= link_to t('.back'), admin_root_path
