--- a/app/views/profiles/_errors.html.slim
+++ b/app/views/profiles/_errors.html.slim
@@ -1,4 +1,4 @@
-.row-fluid
+.row
   - @profile.errors.full_messages.each do |msg|
     .alert.alert-danger
       button type='button' class='close' data-dismiss='alert'
