--- a/app/views/wishes/index.html.slim
+++ b/app/views/wishes/index.html.slim
@@ -1,6 +1,6 @@
-.row-fluid
+.row
   h4= t('.title')
-#wishes.row-fluid
+#wishes.row
   - if @wishes.any?
     = render partial: 'wish', collection: @wishes
   - else
