--- a/app/views/admin/categories/_form.html.slim
+++ b/app/views/admin/categories/_form.html.slim
@@ -1,12 +1,12 @@
-.row-fluid
-  .span12
+.row
+  .col-md-12
     h4= title
-.row-fluid
+.row
   = form_for @category, url: url, method: method, remote: true, builder: StandartBuilder do |f|
     div= f.error_messages
-    .row-fluid
-      .span3= f.label t('.name')
-      .span7= f.text_field :name
-    .row-fluid
-      .span6= f.submit t('save')
-      .span6= link_to t('cancel'), 'javascript: void(false)', onclick: 'Popup.hideModal()'
+    .row
+      .col-md-3= f.label t('.name')
+      .col-md-7= f.text_field :name
+    .row
+      .col-md-6= f.submit t('save')
+      .col-md-6= link_to t('cancel'), 'javascript: void(false)', onclick: 'Popup.hideModal()'
