--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -1,3 +1,3 @@
-.row-fluid.block id="product_#{product.id}"
-  .span2= link_to product.name, product_path(product)
-  .span6= product.description
+.row.block id="product_#{product.id}"
+  .col-md-2= link_to product.name, product_path(product)
+  .col-md-6= product.description
