Story:4 bootstrap from 2.2.6 to 3.3

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,5 +1,5 @@
 footer
   section#copyright
-    .container-fluid
+    .container
       .row
-        .span6= t(".copy_right", year: Time.now.year)
+        .col-md-6= t(".copy_right", year: Time.now.year)
