--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,10 +10,15 @@
  *
  *= require ajaxful_rating
  *= require bootstrap_and_overrides
+ *= require styles
  *= require_self
  *= require admin/dashboard
  *= require_tree .
  */
+
+header{
+  height: 50px;
+}
 
 .content-container {
   width: 1000px;
