--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -2,4 +2,4 @@ footer
   section#copyright
     .container
       .row
-        .col-md-6= t(".copy_right", year: Time.now.year)
+      /  .col-md-6= t(".copy_right", year: Time.now.year)
