--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,11 +1,12 @@
 doctype html
-html
+html.preview
   head
     title Olha
     = stylesheet_link_tag    "application", :media => "all"
     = javascript_include_tag "application"
     = csrf_meta_tags
     = ajaxful_rating_style
+    link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"
   body class="#{yield(:body_class)}"
     header
       .container-fluid
