Story:9 Products main page

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -59,8 +59,24 @@
         = image_tag "01.jpg"
         .product-action
           i.fa.fa-eye
-      .product= image_tag "06.jpg"
-      .product= image_tag "10.jpg"
+        .product-description
+          .product-name Bed
+          .product-price $700
+
+      .product
+        = image_tag "06.jpg"
+        .product-action
+          i.fa.fa-eye
+        .product-description
+          .product-name Nightstand
+          .product-price $400
+      .product
+        = image_tag "10.jpg"
+        .product-action
+          i.fa.fa-eye
+        .product-description
+          .product-name Hammock
+          .product-price $600
 
 
 
