--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,10 +9,10 @@ html.preview
     link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet"
   body class="#{yield(:body_class)}"
     header
-      .container
+      .container-fluid
         = render partial: 'layouts/header'
     #wrap
-      .container.content-container
+      .container-fluid.content-container
         = render partial: 'shared/flash_messages'
         = yield
         = render partial: 'shared/modal_window'
