--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -112,19 +112,44 @@ body {
     width: 350px;
     margin: 20px 20px;
     border-radius: 10px;
-    z-index: 1;
+    .product-action{
+      visibility:hidden;
+      height: 0;
+      i {
+        position: relative;
+        bottom: 145px;
+        left: 140px;
+        font-size: 75px;
+        color: #000000;
+      }
+    }
+    .product-description {
+      float: left;
+      width: 100%;
+      height: 40px;
+      padding-top: 5px;
+      .product-name {
+        float: left;
+        width: 80%;
+        height: 40px;
+        color: #008000;
+        padding-left: 10px;
+      }
+      .product-price{
+        float: left;
+        width: 20%;
+        height: 40px;
+        color: grey;
+        text-align: right;
+        padding-right: 10px;
+      }
+    }
   }
   .product:hover{
     opacity: 0.5;
     cursor: pointer;
     .product-action{
-      i {
-        position: relative;
-        bottom: 145px;
-        left: 140px;
-        font-size: 5px;
-        color: #000000;
-      }
+      visibility:visible;
     }
   }
   .product img {
