--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,20 +1,16 @@
-h2= t('.sign_up')
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  div
+.content-container
+  h2= t('.sign_up')
+  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+    = devise_error_messages!
     = f.label t('.email')
     br
     = f.email_field :email, :autofocus => true
-  div
     = f.label t('.password')
     br
     = f.password_field :password
-  div
     = f.label t('.password_confirmation')
     br
     = f.password_field :password_confirmation
-  div= f.submit t('.sign_up')
-
-= render 'shared/login_via_social_networks'
-
-= render "devise/shared/links"
+    = f.submit t('.sign_up')
+  = render 'shared/login_via_social_networks'
+  = render 'devise/shared/links'
