--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,10 +1,15 @@
+li {
+  list-style-type: none;
+}
+img {
+  width: 100%;
+}
 .preview {
   height: 100%;
   min-height: 100%;
   overflow: hidden;
   overflow-y: scroll;
 }
-
 body {
   font-family: "Roboto","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 16px;
@@ -18,7 +23,6 @@ body {
 .container-fluid {
   padding: 0;
 }
-
 .welcome-content {
   position: absolute;
   left: 0px;
@@ -71,8 +75,7 @@ body {
     padding: 10px;
   }
 }
-
-#hero-slides {
+.carousel {
   position: relative;
   overflow: hidden;
   width: 100%;
@@ -92,8 +95,7 @@ body {
     height: 800px;
   }
 }
-
-#products {
+.products {
   h3 {
     color: #54535a;
     text-align: center;
@@ -165,5 +167,191 @@ input[type="submit"] {
   width: 100px;
   a {
     color: #808080;
+  }
+}
+
+
+
+/* Show left panell*/
+
+.show-menu {
+  height: auto;
+  border: 1px solid #e0e0e0;
+  padding: 0;
+  padding-bottom: 20px;
+  .img-responsive {
+    height: 700px;
+    width: 100%;
+    background: image-url('ec_guy.jpg') no-repeat;
+    background-size: 100% 100%;
+    .handpicked {
+      float: left;
+      width: 200px;
+      height: 30px;
+      background-color: #40C781;
+      color: #ffffff;
+      padding: 2px;
+      font-size: 15px;
+    }
+  }
+  .product-menu {
+    width: 100%;
+    .product-code {
+      float: left;
+      margin-left: 15px;
+      font-size: 14px;
+    }
+    .product-code-description {
+      float: left;
+      padding-left: 5px;
+      font-size: 15px;
+      font-weight: bold;
+    }
+    .icheckbox_flat-grey {
+      float: left;
+      width: 20px;
+      height: 20px;
+      background-color: #d1d1d1;
+      border-radius: 5px;
+    }
+    .custom {
+      float: left;
+      margin-right: 20px;
+    }
+  }
+  .loadToSuccess {
+    background-color: #21B093;
+    color: #000000;
+    margin: 20px 0 30px 0;
+  }
+  .loadToSuccess:hover {
+    background-color: #21B093;
+    color: #ffffff;
+  }
+  .tab-content {
+    border: 1px solid #DDD;
+  }
+}
+
+
+
+/* Show right panell*/
+
+.productsrow {
+  -moz-column-width: 230px;
+  -moz-column-count: 2;
+  -moz-column-gap: 5px;
+  padding: 0 10px;
+  .first {
+    border: 1px solid #e0e0e0;
+    background-color: #E2E0DC;
+    width: 230px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    .ad {
+      padding: 10px 10px 30px 20px;
+      height: 120px;
+      width: 150px;
+    }
+    .ads {
+      font-size: 12px;
+    }
+  }
+  .product-grid {
+    margin-bottom: 20px;
+    width: 90%;
+    border-radius: 5px;
+    border: 1px solid #D7D7D7;
+    .container-item {
+      .item {
+        position: relative;
+        overflow: hidden;
+        .product-images {
+          padding: 0px;
+          margin-bottom: 0px;
+          position: relative;
+        }
+        .item-overlay {
+          position: absolute;
+          top: 0px;
+          left: 0px;
+          width: 100%;
+          height: 100%;
+          .item-button {
+            visibility: hidden;
+            position: absolute;
+            left: 20px;
+            color: #ffffff;
+            width: 30px;
+            height: 30px;
+            text-align: center;
+            padding: 0 2px 4px 0;
+            border-radius: 5px;
+            &.buy {
+              top: 20px;
+              background-color: #40C781;
+            }
+            &.details {
+              top: 60px;
+              background-color: #908992;
+            }
+          }
+          .sale-tag {
+            position: relative;
+            width: 50px;
+            height: 100px;
+            background: none repeat scroll 0% 0% #40C781;
+            transform: rotate(-45deg);
+            top: -40px;
+            left: 233px;
+            span {
+              position: absolute;
+              top: 42px;
+              left: 2px;
+              transform: rotate(45deg);
+              color: #ffffff;
+              font-size: 11px;
+            }
+          }
+        }
+      }
+      .item:hover {
+        opacity: 0.9;
+        cursor: pointer;
+        .item-button {
+          visibility: visible;
+        }
+      }
+    }
+    .widget-text {
+      padding: 15px;
+      .link {
+        color: #54535a;
+      }
+      .post-meta {
+        font-size: 12px;
+      }
+      .badge {
+        background-color: #F32A4E;
+        color: #ffffff;
+      }
+      .amount {
+        padding: 0 5px;
+      }
+      .crimson-color {
+        color: crimson;
+        padding: 0 5px;
+      }
+    }
+    .entry-footer {
+      border-top: 1px solid #D7D7D7;
+      padding: 10px;
+      .datetime {
+        font-size: 12px;
+        .fa-calendar {
+          padding-right: 5px;
+        }
+      }
+    }
   }
 }
