--- a/app/views/home/_products.html.slim
+++ b/app/views/home/_products.html.slim
@@ -1,25 +1,14 @@
-#products
+.products
   .container-fluid
     h3 Products
     .container
-      .product
-        = image_tag "01.jpg"
-        .product-action
-          i.fa.fa-eye
-        .product-description
-          .product-name Bed
-          .product-price $700
-      .product
-        = image_tag "06.jpg"
-        .product-action
-          i.fa.fa-eye
-        .product-description
-          .product-name Nightstand
-          .product-price $400
-      .product
-        = image_tag "10.jpg"
-        .product-action
-          i.fa.fa-eye
-        .product-description
-          .product-name Hammock
-          .product-price $600
+      - 3.times do
+        .product
+          = image_tag "no_image.jpg"
+          .product-action
+            i.fa.fa-eye
+          .product-description
+            .product-name
+              | name
+              //= link_to @products.find_by(id), admin_product_path(product)
+            .product-price $700
