--- a/app/views/admin/products/_form.html.slim
+++ b/app/views/admin/products/_form.html.slim
@@ -3,7 +3,8 @@
 .modal-body
   .row
     = form_for @product, url: url, method: method, remote: true, builder: StandartBuilder do |f|
-      div= f.error_messages(attribute_name: false)
+      .row
+        = f.error_messages(attribute_name: false)
       .row
         .col-md-3= f.label t('.name')
         .col-md-6= f.text_field :name
@@ -13,4 +14,19 @@
       .row
         .col-md-3= f.label t('.assortment')
         .col-md-6= f.collection_select :assortment_id, @assortments, :id, :name, prompt: true
-      .modal-footer= f.submit t('save')
+      = f.fields_for :variants, @product.variants.build do |v|
+        .row
+          .col-md-3= v.label t('.price')
+          .col-md-6= v.text_field :price
+        .row
+          .col-md-3= v.label t('.color')
+          .col-md-6= v.collection_select :color_id, @colors, :id, :name, prompt: true
+        .row
+          .col-md-3= v.label t('.size')
+          .col-md-6= v.collection_select :size_id, @sizes, :id, :name, prompt: true
+        .modal-footer
+          .row
+            .col-md-2
+              = v.label t('.in_stock')
+            .col-md-1= v.check_box :in_stock, {}, 'true', 'false'
+            .col-md-9= f.submit t('save')
