--- a/app/views/admin/products/new.js.erb
+++ b/app/views/admin/products/new.js.erb
@@ -1,3 +1,3 @@
 $('#modal_window').addClass('text-center');
 $('#modal_window').modal('show');
-$('#modal_window').html("<%= j(render partial: 'form', locals: { url: admin_products_path, method: 'post' }) %>");
+$('#modal_window .modal-content').html("<%= j(render partial: 'form', locals: { url: admin_products_path, method: 'post' }) %>");
