--- a/app/views/admin/products/_product.html.slim
+++ b/app/views/admin/products/_product.html.slim
@@ -1,5 +1,5 @@
 .row id="product_#{product.id}"
   .col-md-2= link_to product.name, admin_product_path(product)
   .col-md-6= product.description
-  .col-md-2= link_to t('edit'), edit_admin_product_path(product), remote: true
+  .col-md-2= link_to t('edit'), edit_admin_product_path(product)
   .col-md-2= link_to t('delete'), admin_product_path(product), remote: true, method: 'delete'
